tests/ui/consts/issue-69310-array-size-lit-wrong-ty.stderr
error[E0308]: mismatched types
  --> $DIR/issue-69310-array-size-lit-wrong-ty.rs:10:15
   |
LL | const A: [(); 0.1] = [()];
   |               ^^^ expected `usize`, found floating-point number

error[E0308]: mismatched types
  --> $DIR/issue-69310-array-size-lit-wrong-ty.rs:11:15
   |
LL | const B: [(); b"a"] = [()];
   |               ^^^^ expected `usize`, found `&[u8; 1]`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
